--- a/QuickStart/临时项目/临时项目.csproj
+++ b/QuickStart/临时项目/临时项目.csproj
@@ -11,6 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.6.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityframeworkCore.Tools" Version="2.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0002" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.4.0" />
   </ItemGroup>
