add deno sample

--- a/QuickStart/Linq示例/Linq示例.csproj
+++ b/QuickStart/Linq示例/Linq示例.csproj
@@ -3,4 +3,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <None Update="citys.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
